# Runnable-Rewriting

./: .gitignore  Makefile  README.md
runnable/: CMakeLists.txt
runnable/cmake/: Common.cmake  runnableConfig.cmake
runnable/lib/: CMakeLists.txt
runnable/lib/FunctionCallIdentification/: CMakeLists.txt  FunctionCallIdentification.cpp
runnable/lib/ReachingDefinitions/: CMakeLists.txt  ReachingDefinitionsPass.cpp
runnable/lib/Support/: Assert.cpp  CMakeLists.txt  CommandLine.cpp  Debug.cpp  DebugHelper.cpp  ExampleAnalysis.cpp  IRHelpers.cpp  Statistics.cpp
runnable/runtime/: early-linked.c  support.c
runnable/scripts/: monotone-framework.py  runnable
runnable/tools/: CMakeLists.txt
runnable/tools/runnable-lift/: BinaryFile.cpp  BinaryFile.h  CMakeLists.txt  CPUStateAccessAnalysisPass.cpp  CPUStateAccessAnalysisPass.h  CodeGenerator.cpp  CodeGenerator.h  ExternalJumpsHandler.cpp  ExternalJumpsHandler.h  InstructionTranslator.cpp  InstructionTranslator.h  JumpTargetManager.cpp  JumpTargetManager.h  Main.cpp  NoReturnAnalysis.cpp  NoReturnAnalysis.h  OSRA.cpp  OSRA.h  PTCDump.cpp  PTCInterface.h  SET.cpp  SET.h  SimplifyComparisonsPass.cpp  SimplifyComparisonsPass.h  SubGraph.h  VariableManager.cpp  VariableManager.h
support/: component.mk  install-dependencies.sh  toolchain.mk
support/components/: qemu.mk  runnable-c.mk  runnable.mk  toolchains-list.mk
test/: cmp_instruction.py  count.sh  generate_result.py  lift_coreutils_O0.sh  lift_coreutils_O1.sh  lift_coreutils_O2.sh  lift_coreutils_O3.sh  lift_real.sh  lift_spec_O0.sh  lift_spec_O1.sh  lift_spec_O2.sh  lift_spec_O3.sh  result_coreutils_O0.sh  result_coreutils_O1.sh  result_coreutils_O2.sh  result_coreutils_O3.sh  result_real.sh  result_spec_O0.sh  result_spec_O1.sh  result_spec_O2.sh  result_spec_O3.sh  run_coreutils.sh  run_spec.sh
test/realworld_binary/: bin_info.txt
test/spec/: astar_base.x86.O0  astar_base.x86.O1  astar_base.x86.O2  astar_base.x86.O3  bzip2_base.x86.O0  bzip2_base.x86.O1  bzip2_base.x86.O2  bzip2_base.x86.O3  gcc_base.x86.O1  gcc_base.x86.O2  h264ref_base.x86.O0  h264ref_base.x86.O1  h264ref_base.x86.O2  h264ref_base.x86.O3  hmmer_base.x86.O0  (+17 more)
(+617 files in other folders)
